cmake_minimum_required (VERSION 2.8)
project (serversidedev)
set(CMAKE_INSTALL_PREFIX ~/)
add_subdirectory (lib)
add_executable (css_echo_udp css_echo_udp.cpp)
add_executable (csc_echo_udp csc_echo_udp.cpp)
add_executable (csc_echo_poll csc_echo_poll.cpp)
add_executable (css_echo_poll css_echo_poll.cpp)
add_executable (csc_echo_select csc_echo_select.cpp)
add_executable (css_echo_select css_echo_select.cpp)
add_executable (csc_echo csc_echo.cpp)
add_executable (css_echo css_echo.cpp)
add_executable (csc csc.cpp)
add_executable (css css.cpp)
add_executable (sigaction_waitpidC sigaction_waitpidC.cpp)
add_executable (sigaction_waitpidS sigaction_waitpidS.cpp)
add_executable (my_string my_string.cpp)
add_executable (object_size_empty object_size_empty.cpp)
add_executable (test_map test_map.cpp)
add_executable (test_qsort test_qsort.cpp)
add_executable (test_strace test_strace.cpp)
add_executable (test_coredump test_coredump.cpp)
add_executable (test_va_args_macro test_va_args_macro.cpp)
add_executable (test_fork_and_waitpid test_fork_and_waitpid.cpp)
add_executable (csc_echo_udp_connect csc_echo_udp_connect.cpp)
add_executable (css_echo_udp_connect css_echo_udp_connect.cpp)

target_link_libraries (test_va_args_macro lhf)
target_link_libraries (css_echo_udp lhf)
target_link_libraries (csc_echo_udp lhf)
target_link_libraries (csc_echo_udp_connect lhf)
target_link_libraries (css_echo_udp_connect lhf)
