cmake_minimum_required (VERSION 2.8)
project (serversidedev)
# set(CMAKE_INSTALL_PREFIX ~/)
SET( CMAKE_CXX_FLAGS  "-g -Wall" )
add_subdirectory (lib)
add_subdirectory (names)
add_subdirectory (initd)
add_subdirectory (atomic)
add_subdirectory (basic)
add_executable (css_echo_udp css_echo_udp.cpp)
add_executable (csc_echo_udp csc_echo_udp.cpp)
add_executable (csc_echo_poll csc_echo_poll.cpp)
add_executable (css_echo_poll css_echo_poll.cpp)
add_executable (csc_echo_select csc_echo_select.cpp)
add_executable (css_echo_select css_echo_select.cpp)
add_executable (csc_echo csc_echo.cpp)
add_executable (css_echo css_echo.cpp)
add_executable (csc csc.cpp)
add_executable (css css.cpp)
add_executable (sigaction_waitpidC sigaction_waitpidC.cpp)
add_executable (sigaction_waitpidS sigaction_waitpidS.cpp)
add_executable (my_string my_string.cpp)
add_executable (object_size_empty object_size_empty.cpp)
add_executable (test_map test_map.cpp)
add_executable (test_qsort test_qsort.cpp)
add_executable (test_strace test_strace.cpp)
add_executable (test_coredump test_coredump.cpp)
add_executable (test_va_args_macro test_va_args_macro.cpp)
add_executable (test_fork_and_waitpid test_fork_and_waitpid.cpp)
add_executable (csc_echo_udp_connect csc_echo_udp_connect.cpp)
add_executable (css_echo_udp_connect css_echo_udp_connect.cpp)
add_executable (csc_udp_overflow csc_udp_overflow.cpp)
add_executable (css_udp_overflow css_udp_overflow.cpp)
add_executable (test_ctime test_ctime.c)


target_link_libraries (test_va_args_macro lhf)
target_link_libraries (css_echo_udp lhf)
target_link_libraries (csc_echo_udp lhf)
target_link_libraries (csc_echo_udp_connect lhf)
target_link_libraries (css_echo_udp_connect lhf)
target_link_libraries (csc_udp_overflow lhf)
target_link_libraries (css_udp_overflow lhf)

install (TARGETS css_echo_udp csc_echo_udp csc_echo_poll css_echo_poll csc_echo_select css_echo_select csc_echo css_echo csc css sigaction_waitpidC sigaction_waitpidS my_string object_size_empty test_map test_qsort test_strace test_coredump test_va_args_macro test_fork_and_waitpid csc_echo_udp_connect css_echo_udp_connect csc_udp_overflow css_udp_overflow test_ctime
			RUNTIME DESTINATION bin)
